--- a/HTML_A3/page_one/views/index.html
+++ b/HTML_A3/page_one/views/index.html
@@ -8,7 +8,7 @@
 </head>
     <body>
         <header>
-            <img src="../images/mars.webp" alt="A Picture of Mars" class="mars"/>
+            <img src="../images/mars.webp" alt="A Picture of Mars" class="mars"/> <!-- Mars Header Image -->
             <div class="title">
                 <h1>ALIEN LIFE</h1>
                 <h3 class="subhead">IN THE SOLAR SYSTEM</h3>
@@ -99,7 +99,7 @@
                     us most in our own environment – the high concentration of CO2, methane, and other industrial
                     chemicals in our atmosphere – could well be the fingerprint of intelligent life on planets around
                     other stars.</p>
-            <fieldset>
+            <fieldset> <!-- Bottom Poll Section -->
                 <legend><u>Poll: When do you think we will discover life outside of Earth?</u></legend>
                     <div class="option">
                     <input id='life-1'
@@ -129,7 +129,7 @@
                            value='never'/>
                     <label for="life-4" class="radio-label">Never</label>
                     </div>
-                <button>Submit</button>
+                <button>Submit</button> <!-- Submit Button -->
             </fieldset>
         </div>
     </body>
