--- a/HTML_A5/page/views/index.html
+++ b/HTML_A5/page/views/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Exoplanet</title>
-    <link rel="stylesheet" href="../css/SCSS_A5_RESET.css"/>
-    <meta name="viewport" content="width=device-width initial-scale=1"/>
+    <link rel="stylesheet" href="../css/SCSS_A5_RESET.css"/> <!-- Technically the translated SCSS -->
+    <meta name="viewport" content="width=device-width initial-scale=1"/> <!-- For Tablet / Mobile views -->
 </head>
 <body>
     <div class="page">
